--- a/public/tpl/group.html
+++ b/public/tpl/group.html
@@ -2,10 +2,21 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<a href="#">
-				<h4>{{group.name}}</h4>
+				<h4>{{group.details.name}}</h4>
 			</a>
 		</div>
 	</div>
-	<div class="row">
+	<div class="table-responsive">
+		<table class="table table-condensed table-hover">
+			<thead>
+				<tr>
+					<th></th>
+					<th ng-repeat="user in group.members">{{user.firstname}}</th>
+					<th><div new-user-to-group></div></th>
+				</tr>
+			</thead>
+			<tbody>
+			</tbody>
+		</table>
 	</div>
 </div>
