--- a/public/tpl/group.html
+++ b/public/tpl/group.html
@@ -1,9 +1,8 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-12">
-			<a href="#">
-				<h4>{{group.details.name}}</h4>
-			</a>
+			<editable-group-name my-dir-model='group'></editable-group-name>
+			<button class="btn btn-success btn-xs" title="Add transaction"><i class="fa fa-plus"></i></button>
 		</div>
 	</div>
 	<div class="table-responsive">
