--- a/public/tpl/group.html
+++ b/public/tpl/group.html
@@ -2,7 +2,6 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<editable-group-name my-dir-model='group'></editable-group-name>
-			<button class="btn btn-success btn-xs" title="Add transaction"><i class="fa fa-plus"></i></button>
 		</div>
 	</div>
 	<div class="table-responsive">
@@ -11,10 +10,15 @@
 				<tr>
 					<th></th>
 					<th ng-repeat="user in group.members">{{user.firstname}}</th>
-					<th><div new-user-to-group></div></th>
+					<th class="text-right"><div new-user-to-group></div></th>
 				</tr>
 			</thead>
 			<tbody>
+				<tr ng-repeat="transaction in group.transactions">
+					<th></th>
+					<th ng-repeat="user in group.members">{{user.firstname}}</th>
+					<th class="text-right"><div new-user-to-group></div></th>
+				</tr>
 			</tbody>
 		</table>
 	</div>
