--- a/public/tpl/group.html
+++ b/public/tpl/group.html
@@ -15,9 +15,12 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="transaction in group.transactions">
-					<th></th>
-					<th ng-repeat="user in group.members">{{user.firstname}}</th>
-					<th class="text-right"><div new-user-to-group></div></th>
+					<td></td>
+					<td ng-repeat="user in group.members">{{user.firstname}}</td>
+					<td class="text-right"><div new-user-to-group></div></td>
+				</tr>
+				<tr>
+					<td class="text-center" colspan="{{group.members.length + 2}}" new-trans-to-group my-dir-model='group'></new-trans-to-group></td>
 				</tr>
 			</tbody>
 		</table>
