--- a/public/tpl/group.html
+++ b/public/tpl/group.html
@@ -20,7 +20,7 @@
 					<td class="text-right"><div new-user-to-group></div></td>
 				</tr>
 				<tr>
-					<td class="text-center" colspan="{{group.members.length + 2}}" new-trans-to-group my-dir-model='group'></new-trans-to-group></td>
+					<td class="text-center" colspan="{{group.members.length + 2}}" new-trans-to-group my-dir-model='group'></td>
 				</tr>
 			</tbody>
 		</table>
