--- a/public/tpl/me.html
+++ b/public/tpl/me.html
@@ -1,1 +1,4 @@
-<div edit-me></div>
+<div class="container">
+  <h4 class="page-header"><user-avatar ng-model='requestedUser'></user-avatar>{{requestedUser.firstname}} {{requestedUser.lastname}}</h4>
+  <div edit-me-panel user-model="requestedUser"></div>
+</div>
