--- a/public/tpl/editMe.html
+++ b/public/tpl/editMe.html
@@ -1,4 +1,4 @@
-<form role="form">
+<form role="form" ng-submit="submit()" name="editMeForm">
   <div class="form-group">
     <label>Firstname:</label>
     <input class="form-control" placeholder="Firstname" ng-model="userModel.firstname"/>
@@ -11,11 +11,8 @@
     <label>Email:</label>
     <input class="form-control" placeholder="Email" ng-model="userModel.email"/>
   </div>
+  <div reset-password ng-user="userModel"></div>
   <div class="form-group">
-    <label>Description:</label>
-    <textarea class="form-control" placeholder="Description" rows=4/>
-  </div>
-  <div class="form-group">
-    <button class="btn btn-success">Submit</button>
+    <button class="btn btn-success" ng-disabled="editMeForm.$pristine || editMeForm.$invalid">Submit</button>
   </div>
 </form>
