--- a/public/tpl/editMe.html
+++ b/public/tpl/editMe.html
@@ -13,6 +13,6 @@
   </div>
   <div reset-password ng-user="userModel"></div>
   <div class="form-group">
-    <button class="btn btn-success" ng-disabled="editMeForm.$pristine || editMeForm.$invalid">Submit</button>
+    <button class="btn btn-success" type="submit" ng-disabled="editMeForm.$pristine || editMeForm.$invalid">Submit</button>
   </div>
 </form>
