--- a/public/tpl/newTransToGroupForm.html
+++ b/public/tpl/newTransToGroupForm.html
@@ -13,6 +13,6 @@
 		<input class="form-control" placeholder="Some comments for this transaction"/>
 	</div>
 	<div class="form-group">
-		<button class="btn btn-success">Submit</button>
+		<button class="btn btn-success"type="submit" >Submit</button>
 	</div>
 </form>
