inline editing for group

--- a/public/tpl/newUser.html
+++ b/public/tpl/newUser.html
@@ -1,4 +1,4 @@
-<form role="form">
+<form role="form" style="min-width: 230px;">
   <small>Adding a new member to the group:</small>
   <div class="form-group">
     <label>Email:</label>
