--- a/public/tpl/groups.html
+++ b/public/tpl/groups.html
@@ -6,8 +6,8 @@
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<div class="row">
-							<div class="col-xs-6"><h4>{{group.name}}</h4></div>
-							<div class="col-xs-6 text-right"><div class="huge">$ fs</div></div>
+							<div class="col-xs-7"><h4 class="one-line-truncate" title="{{group.name}}">{{group.name}}</h4></div>
+							<div class="col-xs-5 text-right"><div class="huge">$ fs</div></div>
 						</div>
 						<div class="row" title="{{group.description}}">
 							<div class="col-xs-12 group-box-description"><small>{{group.description}}</small></div>
